objects/csord__Service__c.object
<CustomObject>
    <description>A model of a service provided to a customer. A Service has a recurring component.</description>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <label>Contract Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contracted_Untill__c</fullName>
        <description>Shows the date until this service is contracted. It&apos;s service activation date + contract term duration</description>
        <formula>ADDMONTHS(csord__Activation_Date__c,Contract_Term__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the date until this service is contracted. It&apos;s service activation date + contract term duration</inlineHelpText>
        <label>Contracted Untill</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Creation__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Creation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UPC_ACC_Customer_Number__c</fullName>
        <label>ACC Customer Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Acc_Id__c</fullName>
        <label>ACCID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Addon_Abbreviation__c</fullName>
        <label>Addon Abbreviation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Address_Detail__c</fullName>
        <description>Used to show the UPC Address details</description>
        <formula>IF(NOT(ISBLANK(UPC_Address__r.UPC_BUILDINGNAME__c)),UPC_Address__r.UPC_BUILDINGNAME__c&amp;&quot;, &quot;,&quot;&quot;)&amp; 
(UPC_Address__r.UPC_STREETNAME1__c&amp;&quot; &quot;&amp; UPC_Address__r.UPC_BUILDING_NUMBER__c &amp; UPC_Address__r.UPC_BUILDINGNUMBERANNEX__c&amp;&quot;, &quot;&amp; UPC_Address__r.UPC_POSTCODE__c&amp;&quot; &quot;&amp; UPC_Address__r.UPC_LOCATIONNAME1__c&amp;&quot;, &quot;&amp; UPC_Address__r.UPC_COUNTRYCODEA2__c)</formula>
        <label>Address Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UPC Address</label>
        <referenceTo>UPC_ADBASE__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>csconta__Billing_Account__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Configuration_Context__c</fullName>
        <description>Tells you which context configuration belongs to (BP or not).</description>
        <label>Configuration Context</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Contract_Until_Alert__c</fullName>
        <description>Used to represent the contract as an alert</description>
        <formula>IF( 
    (ADDMONTHS(csord__Activation_Date__c,Contract_Term__c)-TODAY() &gt;=90),IMAGE(&apos;/resource/1536830928000/Available_Icon&apos;,&apos;Green&apos;,20,20),
IF( 
    AND(
        (ADDMONTHS(csord__Activation_Date__c,Contract_Term__c)-TODAY()&lt;90),
        (ADDMONTHS(csord__Activation_Date__c,Contract_Term__c)-TODAY()&gt;=0)
        ),IMAGE(&apos;/resource/1536831026000/Alert_Icon&apos;,&apos;Orange&apos;,20,20),
IF( 
    (ADDMONTHS(csord__Activation_Date__c,Contract_Term__c)-TODAY() &lt;0),IMAGE(&apos;/resource/1536830994000/Unavailable_Icon&apos;,&apos;Red&apos;,20,20),
IMAGE(&apos;/resource/1536831063000/Maintenance_Icon&apos;,&apos;Gray&apos;,20,20) )))</formula>
        <label>Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_ICC_Id__c</fullName>
        <label>ICCID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Installation_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installation Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Services (Installation Contact)</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Mobile_Phone_Number__c</fullName>
        <label>Mobile Phone Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Opportunity_Receipt_of_Termination__c</fullName>
        <formula>csord__Order__r.csordtelcoa__Opportunity__r.UPC_Receipt_of_Termination__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Receipt of Termination</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UPC_Parent_Service_Status__c</fullName>
        <formula>csord__Service__r.csord__Status__c</formula>
        <label>Parent Service Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Process_Terms__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <description>Used in the Orchestrator process for branching(condition steps)</description>
        <label>Process Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Site_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Address</label>
        <referenceTo>UPC_Site_Address__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Site</label>
        <referenceTo>UPC_Site__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Taifun_SAP_Id__c</fullName>
        <description>Holds the SAP@ ID of the Service in Taifun</description>
        <label>Taifun SAP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Tariff_Name__c</fullName>
        <label>Tariff Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Termination_Fee__c</fullName>
        <label>Termination Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UPC_Termination_Wish_Date__c</fullName>
        <description>The agreed date between UPC and a client on when this service will be terminated. Collected in CPQ and output mapped to this field.</description>
        <inlineHelpText>The agreed date between UPC and a client on when this service will be terminated. Collected in CPQ and output mapped to this field.</inlineHelpText>
        <label>Termination Wish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>csoe__Quantity_Decomposition_JSON__c</fullName>
        <label>Quantity Decomposition JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>csord__Activation_Date__c</fullName>
        <description>The date of activation.</description>
        <inlineHelpText>The date of activation.</inlineHelpText>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>csord__Client_Identifier__c</fullName>
        <description>A field for the service owner (client) to store their own unique identifier on the Service Object, for ease of identification to external systems</description>
        <externalId>true</externalId>
        <inlineHelpText>A field for the service owner (client) to store their own unique identifier on the Service Object, for ease of identification to external systems</inlineHelpText>
        <label>Client Identifier</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>csord__Deactivation_Date__c</fullName>
        <description>The date of deactivation.</description>
        <inlineHelpText>The date of deactivation.</inlineHelpText>
        <label>Deactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>csord__Deactivation_Reason__c</fullName>
        <description>A reason to deactivate the service.</description>
        <inlineHelpText>A reason to deactivate the service.</inlineHelpText>
        <label>Deactivation Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__External_Identifier2__c</fullName>
        <description>External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</inlineHelpText>
        <label>External Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>csord__External_Identifier__c</fullName>
        <description>DEPRECATED. External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</description>
        <externalId>true</externalId>
        <inlineHelpText>DEPRECATED. Use External Identifier2 field instead.</inlineHelpText>
        <label>DEPRECATED External Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Identification__c</fullName>
        <description>Identification string for the object, used as the reference from external systems.</description>
        <inlineHelpText>E.g. &quot;spokeServiceAmsterdam&quot; in Hub&amp;Spokes scenario.</inlineHelpText>
        <label>Identification</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Order_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Order Request object which introduced the latest changes to this object.</description>
        <inlineHelpText>Order Request object which introduced the latest changes to this object.</inlineHelpText>
        <label>Order Request</label>
        <referenceTo>csord__Order_Request__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent Order of this Service.</description>
        <inlineHelpText>The parent Order of this Service.</inlineHelpText>
        <label>Order</label>
        <referenceTo>csord__Order__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Service_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The address to which this Service will be delivered.</description>
        <inlineHelpText>The address to which this Service will be delivered.</inlineHelpText>
        <label>Service Address</label>
        <referenceTo>cscrm__Address__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent Service of this Service.</description>
        <inlineHelpText>The parent Service of this Service.</inlineHelpText>
        <label>Parent Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Child Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent Solution of this Service</description>
        <inlineHelpText>The parent Solution of this Service</inlineHelpText>
        <label>Solution</label>
        <referenceTo>csord__Solution__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Status__c</fullName>
        <description>The status of the Service in the fulfillment process.</description>
        <inlineHelpText>Used for state transitions.</inlineHelpText>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Subscription__c</fullName>
        <description>The parent Subscription of this Service.</description>
        <inlineHelpText>The parent Subscription of this Service.</inlineHelpText>
        <label>Subscription</label>
        <referenceTo>csord__Subscription__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>csord__Total_One_Off_Charges__c</fullName>
        <description>Sum of all the one-off charges of the service’s line items</description>
        <inlineHelpText>Sum of all the one-off charges of the service’s line items</inlineHelpText>
        <label>Total One-Off Charges</label>
        <summarizedField>csord__Service_Line_Item__c.csord__Total_Price__c</summarizedField>
        <summaryFilterItems>
            <field>csord__Service_Line_Item__c.csord__Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>csord__Service_Line_Item__c.csord__Is_Recurring__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>csord__Service_Line_Item__c.csord__Service__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>csord__Total_Recurring_Charges__c</fullName>
        <description>Sum of all the recurring charges of the service’s line items</description>
        <inlineHelpText>Sum of all the recurring charges of the service’s line items</inlineHelpText>
        <label>Total Recurring Charges</label>
        <summarizedField>csord__Service_Line_Item__c.csord__Total_Price__c</summarizedField>
        <summaryFilterItems>
            <field>csord__Service_Line_Item__c.csord__Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>csord__Service_Line_Item__c.csord__Is_Recurring__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>csord__Service_Line_Item__c.csord__Service__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>csord__annual_contract_value__c</fullName>
        <label>Annual Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csord__order_product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>csord__Order_Product__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__service_contract_value__c</fullName>
        <label>Service Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Cancelled_By_Change_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled By Change Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Delta_Status__c</fullName>
        <label>Delta Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Continuing In Subscription</fullName>
                </value>
                <value>
                    <fullName>Added To Subscription</fullName>
                </value>
                <value>
                    <fullName>Deleted From Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csordtelcoa__Main_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Parent_Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Services (Parent Product Configuration)</relationshipLabel>
        <relationshipName>Services1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Point_of_No_Return_Reached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inflight change is not possible on an Order whose child service has this checkbox ticked</description>
        <inlineHelpText>Inflight change is not possible on an Order whose child service has this checkbox ticked</inlineHelpText>
        <label>Point of No-Return Reached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Product_Basket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Basket</label>
        <referenceTo>cscfga__Product_Basket__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Product_Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Bundle</label>
        <referenceTo>cscfga__Product_Bundle__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Replaced_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replaced Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Replacement Services</relationshipLabel>
        <relationshipName>Replaced_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Replacement_Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is deprecated because it does not work well in MACD scenarios where several change request are created</description>
        <inlineHelpText>This field is deprecated because it does not work well in MACD scenarios where several change request are created</inlineHelpText>
        <label>DEPRECATED Replacement PC</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Replaced Services</relationshipLabel>
        <relationshipName>Replaced_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Replacement_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replacement Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Replaced Services</relationshipLabel>
        <relationshipName>Replacement_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Service_Number_Sequence__c</fullName>
        <displayFormat>{000000000}</displayFormat>
        <label>Service Number Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Service_Number__c</fullName>
        <label>Service Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>temp__c</fullName>
        <formula>(ADDMONTHS(csord__Activation_Date__c,Contract_Term__c))-TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>temp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Service</label>
    <listViews>
        <fullName>csord__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Prevent_Amendment_when_Account_SuOf_Set</fullName>
        <active>true</active>
        <description>Prevents services from being amended when their account has the SuOf flag set.</description>
        <errorConditionFormula>csord__Subscription__r.csord__Account__r.UPC_Managed_in_SuperOffice__c  = true</errorConditionFormula>
        <errorMessage>Unable to amend Services when they are related to an Account managed in SuperOffice</errorMessage>
    </validationRules>
</CustomObject>